--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ button:focus {
 }
 
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
 	.wrapper {
 		width: 100%;
 	}
@@ -252,19 +252,22 @@ button:focus {
 	}
 
 	.colors {
-		top: 100px
+		top: 130px;
+		height: 250px;
 	}
 
 	.color {
-		width: 30px;height: 30px;
+		width: 30px;
+		height: 30px;
 	}
 
 	.modal {
 		width: 90%;
-		height: 400px;
+		height: 60%;
 	}
 
 	button {
 		padding: 10px 10px;
 	}
 }
+
